--- a/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
@@ -1,6 +1,10 @@
-<div class="mona-combo-box" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : 0" #dropdownWrapper>
-    <input monaTextBox class="mona-input-inner" [ngModel]="comboBoxValue()" (ngModelChange)="comboBoxValue$.next($event)" (keydown)="onKeydown($event)">
-    @if (showClearButton && valuePopupListItem) {
+<div class="mona-combo-box" [ngClass]="{'mona-disabled': disabled}"
+     [attr.tabindex]="disabled ? -1 : 0" #dropdownWrapper>
+    <input monaTextBox class="mona-input-inner"
+           [ngModel]="comboBoxValue()"
+           (ngModelChange)="comboBoxValue$.next($event)"
+           (keydown)="onKeydown($event)">
+    @if (showClearButton && selectedListItem()) {
         <span class="mona-input-clear-icon" (click)="clearValue($event)">
             <fa-icon [icon]="clearIcon"></fa-icon>
         </span>
@@ -12,18 +16,22 @@
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-popup-list-wrapper">
-        <mona-popup-list [textField]="textField" [valueField]="valueField" [groupField]="groupField" [value]="value ? [value] : []"
-                         (valueChange)="onPopupListValueChange($event)">
+        <mona-list [height]="200"
+                   (itemSelect)="onItemSelect($event)"
+                   [monaListSelectable]="selectableOptions"
+                   (selectedKeysChange)="onSelectedKeysChange($event)">
             @if (itemTemplate) {
-                <ng-template monaListItemTemplate let-dataItem let-listItem="listItem">
-                    <ng-container [ngTemplateOutlet]="itemTemplate" [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
+                <ng-template monaListItemTemplate let-dataItem>
+                    <ng-container [ngTemplateOutlet]="itemTemplate"
+                                  [ngTemplateOutletContext]="{$implicit: dataItem}"></ng-container>
                 </ng-template>
             }
             @if (groupTemplate) {
-                <ng-template monaListGroupTemplate let-dataItem let-listItem="listItem">
-                    <ng-container [ngTemplateOutlet]="groupTemplate" [ngTemplateOutletContext]="{$implicit: dataItem, listItem}"></ng-container>
+                <ng-template monaListGroupHeaderTemplate let-group>
+                    <ng-container [ngTemplateOutlet]="groupTemplate"
+                                  [ngTemplateOutletContext]="{$implicit: group}"></ng-container>
                 </ng-template>
             }
-        </mona-popup-list>
+        </mona-list>
     </div>
 </ng-template>
