--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -3,7 +3,7 @@
     <div class="mona-dropdown-value">
         @if (!valueTemplate) {
             @if (selectedListItem()) {
-                <span>{{dropdownText()}}</span>
+                <span>{{valueText()}}</span>
             } @else {
                 <span>{{placeholder}}</span>
             }
