Multi select navigation and key events

--- a/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/multi-select/components/multi-select/multi-select.component.html
@@ -31,7 +31,7 @@
             <fa-icon [icon]="clearIcon"></fa-icon>
         </span>
     }
-    <button monaButton class="mona-input-button" (click)="open()">
+    <button monaButton [tabindex]="-1" class="mona-input-button" (click)="open()">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </button>
 </div>
