--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -17,7 +17,7 @@
             <fa-icon [icon]="clearIcon"></fa-icon>
         </span>
     }
-    <button monaButton class="mona-input-button">
+    <button monaButton [tabindex]="-1" class="mona-input-button">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </button>
 </div>
