--- a/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/combo-box/components/combo-box/combo-box.component.html
@@ -9,7 +9,7 @@
             <fa-icon [icon]="clearIcon"></fa-icon>
         </span>
     }
-    <button monaButton class="mona-input-button" (click)="open()">
+    <button monaButton [tabindex]="-1" class="mona-input-button" (click)="open()">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </button>
 </div>
