--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -253,7 +253,7 @@
                                                 [valueNormalizer]="comboBoxValueNormalizer$"
                                                 [ngModel]="selectedComboBoxDataItem" [itemDisabled]="dropdownItemDisabler"
                                                 (ngModelChange)="onComboBoxValueChange($event)">
-                                    <ng-template monaComboBoxGroupTemplate let-group>
+                                    <ng-template monaComboBoxGroupHeaderTemplate let-group>
                                         <span style="color: crimson; font-weight: bold;">{{group}}</span>
                                     </ng-template>
                                 </mona-combo-box>
@@ -291,33 +291,14 @@
                                     <ng-template monaDropDownListValueTemplate let-dataItem>
                                         <span style="color: darkorange; font-weight: 600;">{{dataItem?.text}}</span>
                                     </ng-template>
-                                    <ng-template monaDropDownListGroupTemplate let-group>
+                                    <ng-template monaDropDownListGroupHeaderTemplate let-group>
                                         <span style="color: crimson; font-weight: bold;">{{group}}</span>
                                     </ng-template>
                                 </mona-drop-down-list>
-                                <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value"
-                                                   style="width: auto; min-width: 200px;"
-                                                   monaDropDownGroupable groupBy="group"
-                                                   [monaMultiSelectSummaryTag]="multiSelectTagCount" [filterable]="true"
-                                                   [showClearButton]="true"
-                                                   [ngModel]="selectedMultiSelectDataItems"
-                                                   (ngModelChange)="onMultiSelectValueChange($event)">
-                                    <ng-template monaMultiSelectItemTemplate let-dataItem>
-                                        <span style="color: darksalmon; font-weight: bold">{{dataItem.text}}</span>
-                                    </ng-template>
-                                    <ng-template monaMultiSelectGroupTemplate let-group>
-                                        <span
-                                            style="color: deepskyblue; font-weight: bold">{{group.toUpperCase()}}</span>
-                                    </ng-template>
-                                    <ng-template monaMultiSelectSummaryTagTemplate let-dataItems>
-                                        <span style="color: deeppink;"><span
-                                            style="font-weight: bold; color: deepskyblue;">+{{dataItems.length - multiSelectTagCount}}</span> items</span>
-                                    </ng-template>
-                                </mona-multi-select>
+
                             </div>
                             <div style="display: flex; align-items: center;">
                                 <button monaButton>Line 2</button>
-
                                 <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false"
                                                   [min]="datePickerMinValue" [max]="datePickerMaxValue" [ngModel]="datePickerValue"
                                                   (ngModelChange)="onDatePickerValueChange($event)"></mona-date-picker>
@@ -471,6 +452,26 @@
                                                      [expandedKeys]="dropdownTreeExpandedKeys"
                                                      (expandedKeysChange)="onDropdownTreeExpandedKeysChange($event)"
                                                      style="width: 220px;"></mona-drop-down-tree>
+                                <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value"
+                                                   style="width: auto; min-width: 200px;"
+                                                   monaDropDownGroupable groupBy="group"
+                                                   [monaMultiSelectSummaryTag]="multiSelectTagCount"
+                                                   monaDropDownFilterable
+                                                   [showClearButton]="true"
+                                                   [ngModel]="selectedMultiSelectDataItems"
+                                                   (ngModelChange)="onMultiSelectValueChange($event)">
+                                    <ng-template monaMultiSelectItemTemplate let-dataItem>
+                                        <span style="color: darksalmon; font-weight: bold">{{dataItem.text}}</span>
+                                    </ng-template>
+                                    <ng-template monaMultiSelectGroupHeaderTemplate let-group>
+                                        <span
+                                                style="color: deepskyblue; font-weight: bold">{{group.toUpperCase()}}</span>
+                                    </ng-template>
+                                    <ng-template monaMultiSelectSummaryTagTemplate let-dataItems>
+                                        <span style="color: deeppink;"><span
+                                                style="font-weight: bold; color: deepskyblue;">+{{dataItems.length - multiSelectTagCount}}</span> items</span>
+                                    </ng-template>
+                                </mona-multi-select>
                             </div>
 
                             <div style="display: flex; align-items: center; margin-top: 40px;">
