--- a/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
@@ -1,25 +1,19 @@
-<div class="mona-combo-box" [ngClass]="{'mona-disabled': disabled}"
+<div class="mona-auto-complete" [ngClass]="{'mona-disabled': disabled}"
      [attr.tabindex]="disabled ? -1 : 0" #dropdownWrapper>
     <input monaTextBox class="mona-input-inner"
-           [ngModel]="comboBoxValue()"
-           (ngModelChange)="comboBoxValue$.next($event)"
+           [ngModel]="autoCompleteValue()"
+           (ngModelChange)="autoCompleteValue$.next($event)"
            (keydown)="onKeydown($event)">
-    @if (showClearButton && selectedListItem()) {
+    @if (showClearButton && autoCompleteValue()) {
         <span class="mona-input-clear-icon" (click)="clearValue($event)">
             <fa-icon [icon]="clearIcon"></fa-icon>
         </span>
     }
-    <button monaButton [tabindex]="-1" class="mona-input-button" (click)="open()">
-        <fa-icon [icon]="dropdownIcon"></fa-icon>
-    </button>
 </div>
 
 <ng-template #popupTemplate>
     <div class="mona-dropdown-popup-list-wrapper">
-        <mona-list [height]="200"
-                   (itemSelect)="onItemSelect($event)"
-                   [monaListSelectable]="selectableOptions"
-                   (selectedKeysChange)="onSelectedKeysChange($event)">
+        <mona-list [height]="200" (itemSelect)="onItemSelect($event)">
             @if (footerTemplate) {
                 <ng-template monaListFooterTemplate>
                     <ng-container [ngTemplateOutlet]="footerTemplate"></ng-container>
