--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -248,6 +248,7 @@
                                 <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value"
                                                 monaDropDownGroupable [groupBy]="'group'"
                                                 [monaDropDownFilterable]="{debounce: 0}"
+                                                (filterChange)="onComboBoxFilterChange($event)"
                                                 style="width: 200px;" [disabled]="false"
                                                 [showClearButton]="true" [allowCustomValue]="true"
                                                 [valueNormalizer]="comboBoxValueNormalizer$"
@@ -262,6 +263,7 @@
                                                     valueField="value"
                                                     monaDropDownGroupable [groupBy]="'group'"
                                                     monaDropDownFilterable
+                                                    (filterChange)="onAutoCompleteFilterChange($event)"
                                                     [showClearButton]="true"
                                                     [ngModel]="autoCompleteValue"
                                                     (ngModelChange)="onAutoCompleteValueChange($event)"
