--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -77,6 +77,7 @@ div.mona-grid-column-wrap {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    overflow: hidden;
 }
 
 span.mona-grid-column-title {
