--- a/projects/mona-ui/src/lib/date-inputs/date-picker/date-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/date-picker/date-picker.component.html
@@ -1,7 +1,9 @@
 <div class="mona-date-picker" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
-    <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString()"
+    <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly"
+           [ngModel]="currentDateString()"
            (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
-    <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()" [disabled]="disabled" [tabIndex]="-1">
+    <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
+            [disabled]="disabled" [tabIndex]="-1">
         <fa-icon [icon]="dateIcon"></fa-icon>
     </button>
 </div>
